add: e2e testing with fake for restapi
